
3.  Improvements to determination of ghostscript command syntax
    (based on dev2bitmap).  Suggestion by Brian Ripley.

4.  Add support for rectangles (translated to a path). (Simon)

5.  Now able to use PostScript 'linecap', 'linejoin' and 'linemiter'
    properties, which map to 'lineend', 'linejoin' and 'linemitre' grid line
    properties. (Simon)


Changes from version 0.8-0 to 0.8-4
===================================

1.  Fixed bug in conversion of "PictureStroke" objects to grobs
    with multiple "moves" (i.e., a complex path that is stroked
    rather than filled).  It used to drop the last bit of the 
    path (the bit after the last "move").

    Problem reported by Rene Locher.

2.  Made conversion of "PictureOp" objects to grobs a bit more
    robust (can now handle 'x' and 'y' vectors that have no
    name attributes).

3.  Added more defensive code for extraction of font information
    when importing text.

    Thanks to Wojciech Wojciak for report, diagnosis, and patch!

4.  Added defenses against NUL bytes in text.

    The test case is a file produced by dvips which has bitmap
    font (subsets) with custom encodings so that some pieces
    of text contain control characters, including in one case 
    a NUL byte (\000 or ^@).  (See Bugs/tabart.ps)

    Thanks again to Wojciech Wojciak for report and test case.

5.  Moved vignette files from inst/doc/ to vignettes/ directory.

    Removed jss.cls and jss.bst from inst/doc.

    Thanks to Brian Ripley for pointing out the problem and solution!


Changes from version 0.7-4 to 0.8-0
===============================

1.  Added support for /xshow, /yshow, and /xyshow
    (fine-tuned positioning of text)

2.  Small fix for case where import generates char paths
    from text that consists of only a moveto 
    (e.g., text is only a space character).

3.  Ability to cope with "Separation" colorspace
    (actually just some defensive code so that PostScriptTrace()