@@ -33,6 +33,12 @@ Changes from version 0.8-4 to 0.9-0
     properties, which map to 'lineend', 'linejoin' and 'linemitre' grid line
     properties. (Simon)
 
+6.  Added defence for /Pattern result from /currentcolorspace
+    (which we cannot support properly).
+
+    Treat this the same as /Separation result, which is (now) to
+    use "grey" as the colour.
+
 
 Changes from version 0.8-0 to 0.8-4
 ===================================
